--- a/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
@@ -21,7 +21,10 @@
             height: 50px;
         }
         #FD {
-            margin-top: 320px;
+            position: absolute;
+            bottom: 0.1%;
+            right: 35%;
+
         }
     body { background-image: url('../../Images/RedigeretForside.PNG'); background-size: cover; }
     </style>
@@ -29,7 +32,7 @@
 <body>
         
         <h2>Velkommen til InnoVest</h2>
-        <div id="FD" align="center">
+        <div id="FD">
             <div>
                 <input type="button" class="button" value="Opret Student" onclick="location.href='@Url.Action("OpretStudent", "Home")'" />
                 <input type="button" class="button" value="Student Liste" onclick="location.href='@Url.Action("StudentListe", "Home")'" />
