Har ændret forsidens tekst til at være hvid og ændret skriften til new times roman

--- a/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
@@ -27,18 +27,18 @@
 
         }
         #Ftekst {
-            color: #3927F0;
+            color: white;
         }
         #Ftekst2 {
-            color: #3927F0;
+            color: white;
         }
     body { background-image: url('../../Images/RedigeretForside.PNG'); background-size: cover; }
     </style>
 </head>
 <body>
         
-        <h2 id="Ftekst" style="font-size:300%; font-family:verdana;" align="center" >Velkommen til Danmarks største Arbejdsplads</h2>
-    <h3 align="center" id="Ftekst2">Database til kandidater</h3>
+        <h2 id="Ftekst" style="font-size:300%; font-family:Times New Roman" align="center" >Velkommen til Danmarks største Arbejdsplads</h2>
+    <h3 align="center" id="Ftekst2" style="font-family:'Times New Roman'">Database til kandidater</h3>
         <div id="FD">
             <div>
                 <input type="button" class="button" value="Opret Student" onclick="location.href='@Url.Action("OpretStudent", "Home")'" />
