Har fjernet Øverste titel og flyttet undertitel til over knapperne

--- a/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
@@ -37,9 +37,10 @@
 </head>
 <body>
         
-        <h2 id="Ftekst" style="font-size:300%; font-family:Times New Roman" align="center" >Velkommen til Danmarks største Arbejdsplads</h2>
-    <h3 align="center" id="Ftekst2" style="font-family:'Times New Roman'">Database til kandidater</h3>
         <div id="FD">
+            <div>
+                <h3 align="center" id="Ftekst2" style="font-family:'Times New Roman'">Database til kandidater</h3>
+            </div>
             <div>
                 <input type="button" class="button" value="Opret Student" onclick="location.href='@Url.Action("OpretStudent", "Home")'" />
                 <input type="button" class="button" value="Student Liste" onclick="location.href='@Url.Action("StudentListe", "Home")'" />
