--- a/Hovedopgave1/Hovedopgave1/Views/Home/StudentListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/StudentListe.cshtml
@@ -30,8 +30,10 @@
             <input type="submit" value="Søg" />
             <input type="reset" value="Ryd felter" />
             <input type="button" class="button" value="Vis hele listen" onclick="location.href='@Url.Action("StudentListe", "Home")'" />
+            <input type="button" class="button" value="Opret Student" onclick="location.href='@Url.Action("OpretStudent", "Home")'" />
+            <input type="button" class="button" value="Tilbage til forside" onclick="location.href='@Url.Action("Forside", "Home")'" />
         }
-   
+
     </div>
     <table class="table">
         <tr>
