--- a/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerListe.cshtml
@@ -31,6 +31,7 @@
         <input type="submit" value="Søg" />
         <input type="reset" value="Ryd Felter" />
         <input type="button" class="button" value="Vis hele listen" onclick="location.href='@Url.Action("TilføjerListe", "Home")'" />
+        <input type="button" class="button" value="Tilbage til forside" onclick="location.href='@Url.Action("Forside", "Home")'" />
     </div>
     }
     <table class="table">
