--- a/Hovedopgave1/Hovedopgave1/Views/Home/VirksomhedListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/VirksomhedListe.cshtml
@@ -30,6 +30,7 @@
             <input type="submit" value="Søg" />
             <input type="reset" value="Ryd Felter" />
             <input type="button" class="button" value="Vis hele listen" onclick="location.href='@Url.Action("VirksomhedListe", "Home")'" />
+            <input type="button" class="button" value="Tilbage til forside" onclick="location.href='@Url.Action("Forside", "Home")'" />
         }
     </div>
    
