Har rettet OpretStudent til

--- a/Hovedopgave1/Hovedopgave1/Views/Home/OpretStudent.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/OpretStudent.cshtml
@@ -134,7 +134,7 @@
         
 
         function getCurrentdate() {
-            document.getElementById('DatoForOprettelse').value = hour + ":" + minutes + " " + day + "/" + month + "/" + year;
+            document.getElementById('DatoForOprettelse').value =  day + "/" + month + "/" + year;
         }
     </script>
 </body>
