--- a/Hovedopgave1/Hovedopgave1/Views/Bruger/Login.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Bruger/Login.cshtml
@@ -20,6 +20,10 @@
                 <label>Password:</label>
                 @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
             </div>
+            <div class="form-group">
+                <label>Rettighed:</label>
+                @Html.TextBoxFor(m => m.Rettighed, new { @class = "form-control"})
+            </div>
             <input type="submit" value="Log in" class="btn btn-primary" />
         }
     </div>
