Ændring i brugerforside, knappen er nu center top

--- a/Hovedopgave1/Hovedopgave1/Views/Home/BrugerForside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/BrugerForside.cshtml
@@ -22,9 +22,7 @@
         }
 
         #FD {
-            position: absolute;
-            bottom: 0.1%;
-            right: 35%;
+            
         }
 
         #Ftekst {
@@ -49,7 +47,7 @@
         </div>
 
 
-        <div>
+        <div align="center">
            
             <input type="button" class="button" value="Tilflytter Liste" onclick="location.href='@Url.Action("TilføjerListe", "Home")'" />
         </div>
