--- a/Hovedopgave1/Hovedopgave1/Views/Home/BrugerForside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/BrugerForside.cshtml
@@ -49,7 +49,7 @@
 
         <div align="center">
            
-            <input type="button" class="button" value="Tilflytter Liste" onclick="location.href='@Url.Action("TilføjerListe", "Home")'" />
+            <input type="button" class="button" value="Tilflytter Liste" onclick="location.href='@Url.Action("TilføjerListeBruger", "Home")'" />
         </div>
 
     </div>
