--- a/Hovedopgave1/Hovedopgave1/Views/Home/MedarbejderForside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/MedarbejderForside.cshtml
@@ -9,9 +9,55 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>MedarbejderForside</title>
+    <link rel="stylesheet" href="~/Content/bootstrap.css" />
+    <style>
+        input[type=button] {
+            cursor: pointer;
+            font-size: medium;
+            background-color: #000000;
+            color: white;
+            text-align: center;
+            width: 150px;
+            height: 40px;
+        }
+
+        #FD {
+
+        }
+
+        #Ftekst {
+            color: white;
+        }
+
+        #Ftekst2 {
+            color: white;
+        }
+
+        body {
+            background-image: url('../../Images/RedigeretForside.PNG');
+            background-size: cover;
+        }
+    </style>
 </head>
 <body>
-    <div> 
+
+    <div align="center" id="FD">
+        <div>
+            <h3 align="center" id="Ftekst2" style="font-family:'Times New Roman'">Database til kandidater</h3>
+        </div>
+        <div>
+            <input type="button" class="button" value="Student Liste" onclick="location.href='@Url.Action("StudentListeMedarbejder", "Home")'" />
+            <input type="button" class="button" value="Virksomheds Liste" onclick="location.href='@Url.Action("VirksomhedListeMedarbejder", "Home")'" />
+        </div>
+        <div>
+            <input type="button" class="button" value="Tilflytter Liste" onclick="location.href='@Url.Action("TilføjerListeMedarbejder", "Home")'" />
+        </div>
+        <br />
+
+        <br />
+        <div>
+
+        </div>
     </div>
 </body>
 </html>
