Har sat baggrundsbillede på Login og flyttet felter til midten

--- a/Hovedopgave1/Hovedopgave1/Views/Bruger/Login.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Bruger/Login.cshtml
@@ -3,7 +3,16 @@
     Layout = null;
 }
 
-<div class="panel">
+<style>
+    body {
+        background-image: url('../../Images/RedigeretForside.PNG');
+        background-size: cover;
+     
+    }
+</style>
+
+<body>
+<div class="panel" align ="center">
     <div class="panel-heading">
         <h3> Log In</h3>
     </div>
@@ -28,3 +37,4 @@
         }
     </div>
 </div>
+    </body>
